fix: 명세에 맞게 프로필 리뷰 전체 조회 응답 수정, 추후 리팩토링 필요